--- a/src/layouts/app.astro
+++ b/src/layouts/app.astro
@@ -19,7 +19,7 @@ const { title } = Astro.props
       <meta charset="utf-8" />
       <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><![endif]-->
       <Head title={title} />
-      <HeadAnalytic />
+      <!-- <HeadAnalytic /> -->
 
       <slot name="head"/>
     </head>
