--- a/src/components/PostBlock.astro
+++ b/src/components/PostBlock.astro
@@ -6,6 +6,7 @@ const { post, class: className } = Astro.props
     background: hsl(0deg 0% 100%);
     border: 1px solid hsl(44deg 14% 79%);
     border-top: 5px solid hsl(44deg 14% 79%);
+    width: 100%;
   }
 
   .header {
