--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -139,7 +139,7 @@ const navigationClasses = (path = '/', isRight = false) => {
       <li class={navigationClasses('/search', true)}>
         <SearchButton client:load>
           <SvgIcon slot="searchIcon" name="search-web" size="1.3rem" />
-          <SvgIcon slot="closeIcon" name="close-box" size="2rem" />
+          <SvgIcon slot="closeIcon" name="close" size="2rem" />
         </SearchButton>
       </li>
     </ul>
