--- a/src/components/TopPosts.astro
+++ b/src/components/TopPosts.astro
@@ -2,7 +2,7 @@
 import PostBlock from '@components/PostBlock.astro'
 import Sidebar from '@components/Sidebar.astro'
 
-const { posts, class: className } = Astro.props
+const { posts } = Astro.props
 ---
 <style>
   .articles-block {
