--- a/src/components/BottomPosts.astro
+++ b/src/components/BottomPosts.astro
@@ -1,7 +1,7 @@
 ---
 import PostBlock from '@components/PostBlock.astro'
 
-const { posts, class: className } = Astro.props
+const { posts } = Astro.props
 ---
 <style>
   .posts-bottom-list {
@@ -33,7 +33,7 @@ const { posts, class: className } = Astro.props
   }
 </style>
 
-<div class:list={['posts-bottom-list', className]}>
+<div class="posts-bottom-list">
   {posts.map((post, i, arr) => (
     <PostBlock class={[
       'posts-bottom-item',
