--- a/src/components/HeadAnalytic.astro
+++ b/src/components/HeadAnalytic.astro
@@ -1,3 +1,7 @@
+---
+
+---
+{/* eslint-disable */}
 <script is:inline async src="https://www.googletagmanager.com/gtag/js?id=G-YCVPPMMQMB"></script>
 <script is:inline async>
   window.dataLayer = window.dataLayer || [];
