--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -1,4 +1,6 @@
 ---
+import '@styles/app.css'
+
 import { DEFAULT_TITLE, DEFAULT_KEYWORDS, DEFAULT_DESCRIPTION, THEME_COLOR } from '@utils/content'
 
 const { title } = Astro.props
