--- a/src/layouts/app.astro
+++ b/src/layouts/app.astro
@@ -4,28 +4,25 @@ import { Sprite } from 'astro-icon'
 import Head from '@components/Head.astro'
 import HeadAnalytic from '@components/HeadAnalytic.astro'
 import Header from '@components/Header.astro'
+import Hotwire from '@components/Hotwire.astro'
 import Footer from '@components/Footer.astro'
 import FooterAudioPlayer from '@components/FooterAudioPlayer.astro'
 import ServiceWorker from '@components/ServiceWorker.astro'
 
 const { title } = Astro.props
 ---
-<script>
-  import '@styles/app.css'
-  import '@utils/initial-client'
-</script>
-
-<Sprite.Provider>
-  <html lang="en">
-    <head>
-      <meta charset="utf-8" />
-      <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><![endif]-->
-      <Head title={title} />
-      <slot name="head"/>
-      { pwaInfo && <Fragment set:html={pwaInfo.webManifest.linkTag} /> }
-      <HeadAnalytic />
-    </head>
-    <body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><![endif]-->
+    <Head title={title} />
+    <slot name="head"/>
+    { pwaInfo && <Fragment set:html={pwaInfo.webManifest.linkTag} /> }
+    <HeadAnalytic />
+  </head>
+  <body>
+    <Sprite.Provider>
+      <Hotwire />
       <div class="layout-wrapper">
         <Header />
         <div class="layout-body"><slot /></div>
@@ -33,6 +30,6 @@ const { title } = Astro.props
       </div>
       <FooterAudioPlayer />
       <ServiceWorker />
-    </body>
-  </html>
-</Sprite.Provider>
+    </Sprite.Provider>
+  </body>
+</html>
