--- a/src/components/MainPost.astro
+++ b/src/components/MainPost.astro
@@ -114,7 +114,7 @@ const audioInfo = {
   }
 
   .article-content :global(li > p) {
-    margin: 0;
+    margin: 0 0 0.5rem;
   }
 
   @media screen and (max-width: 600px) {
