--- a/src/components/MainPost.astro
+++ b/src/components/MainPost.astro
@@ -196,6 +196,7 @@ const audioInfo = {
         <Fragment set:html={content} />
       </div>
     </article>
+    <slot />
   </div>
   <div class="sidebar">
     <Sidebar />
