--- a/src/pages/posts/[pubYear]/[pubMonth]/[pubDay]/[slug].astro
+++ b/src/pages/posts/[pubYear]/[pubMonth]/[pubDay]/[slug].astro
@@ -2,6 +2,7 @@
 import AppLayout from '@layouts/app.astro'
 import PostHead from '@components/PostHead.astro'
 import MainPost from '@components/MainPost.astro'
+import PostComments from '@components/PostComments.svelte'
 import { getPosts } from '@utils/posts'
 
 export const getStaticPaths = () => (
@@ -21,5 +22,8 @@ const { post } = Astro.props
 <AppLayout title={post.title}>
   <PostHead slot="head" post={post} />
 
-  <MainPost post={post} fullText={true} />
+  <MainPost post={post} fullText={true}>
+    <PostComments client:visible />
+  </MainPost>
+
 </AppLayout>
