--- a/src/components/MainPost.astro
+++ b/src/components/MainPost.astro
@@ -70,7 +70,7 @@ const audioInfo = {
   }
 
   .article-main-image-wrapper {
-    flex-basis: 10rem;
+    flex-basis: 155px;
   }
 
   .article-main-image {
@@ -105,6 +105,7 @@ const audioInfo = {
     gap: 0.2rem;
     flex-basis: 60rem;
     flex-wrap: wrap;
+    font-size: 0.9rem;
   }
 
   .article-separator {
@@ -179,11 +180,11 @@ const audioInfo = {
                 <SvgIcon slot="stopIcon" name="stop" size="2rem" />
               </AudioButton>
               <div class="article-media-data">
-                <div>{post.frontmatter.duration} ({post.frontmatter.audioSize})</div>
-                <a href={post.frontmatter.audio_url}>Завантажити</a>
+                <div>{post.frontmatter.duration} - </div>
+                <a href={post.frontmatter.audio_url}>MP3 ({post.frontmatter.audioSize})</a>
                 {post.frontmatter.audio_aac_url &&
                   <Fragment>
-                    , <a href={post.frontmatter.audio_aac_url}>AAC</a>
+                    , <a href={post.frontmatter.audio_aac_url}>AAC ({post.frontmatter.audioAacSize})</a>
                   </Fragment>
                 }
               </div>
@@ -196,7 +197,9 @@ const audioInfo = {
         <Fragment set:html={content} />
       </div>
     </article>
-    <slot />
+
+    <slot /> <!-- using for comments -->
+
   </div>
   <div class="sidebar">
     <Sidebar />
