--- a/src/components/HeadAnalytic.astro
+++ b/src/components/HeadAnalytic.astro
@@ -1,12 +1,5 @@
-<script is:inline>
-  // Forward the necessary functions to the web worker layer
-  window.partytown = {
-    forward: ['dataLayer.push']
-  };
-</script>
-
-<script is:inline type="text/partytown" src="https://www.googletagmanager.com/gtag/js?id=G-YCVPPMMQMB"></script>
-<script is:inline type="text/partytown">
+<script is:inline async src="https://www.googletagmanager.com/gtag/js?id=G-YCVPPMMQMB"></script>
+<script is:inline async>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
