--- a/src/components/MainPost.astro
+++ b/src/components/MainPost.astro
@@ -158,6 +158,7 @@ const audioInfo = {
               title={post.frontmatter.title}
               width={postImg.size}
               height={postImg.size}
+              loading="lazy"
             />
           </div>
           <div class="article-frontmatter">
