--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -52,6 +52,16 @@ import SvgIcon from '@components/SvgIcon.astro'
   }
 
   @media screen and (max-width: 900px) {
+    .authors-list {
+      padding: 0 1rem 1rem 1rem;
+    }
+
+    .author {
+      max-width: 100%;
+    }
+
+
+
     .photo {
       display: none;
     }
