--- a/src/components/Pages.astro
+++ b/src/components/Pages.astro
@@ -1,4 +1,6 @@
 ---
+import { normalizePath } from '@utils/links'
+
 const { page, firstPageUrl } = Astro.props
 
 const prevPageUrl = page.url.prev ? (
@@ -30,6 +32,6 @@ const nextPageUrl = page.url.next
 </style>
 
 <div class="pages-btn-wrapper">
-  {prevPageUrl && <a class="pages-btn" href={prevPageUrl}>&laquo; Новіші випуски</a>}
-  {nextPageUrl && <a class="pages-btn" href={nextPageUrl}>Старіші випуски &raquo;</a>}
+  {prevPageUrl && <a class="pages-btn" href={normalizePath(prevPageUrl)}>&laquo; Новіші випуски</a>}
+  {nextPageUrl && <a class="pages-btn" href={normalizePath(nextPageUrl)}>Старіші випуски &raquo;</a>}
 </div>
