--- a/src/components/Pages.astro
+++ b/src/components/Pages.astro
@@ -1,5 +1,5 @@
 ---
-import { normalizePath } from '@utils/links'
+import { normalizePagePath } from '@utils/links'
 
 const { page, firstPageUrl } = Astro.props
 
@@ -32,6 +32,6 @@ const nextPageUrl = page.url.next
 </style>
 
 <div class="pages-btn-wrapper">
-  {prevPageUrl && <a class="pages-btn" href={normalizePath(prevPageUrl)}>&laquo; Новіші випуски</a>}
-  {nextPageUrl && <a class="pages-btn" href={normalizePath(nextPageUrl)}>Старіші випуски &raquo;</a>}
+  {prevPageUrl && <a class="pages-btn" href={normalizePagePath(prevPageUrl)}>&laquo; Новіші випуски</a>}
+  {nextPageUrl && <a class="pages-btn" href={normalizePagePath(nextPageUrl)}>Старіші випуски &raquo;</a>}
 </div>
