--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,10 +1,14 @@
 ---
+import { normalizePathname } from '@utils/links'
+
 const { pathname } = Astro.url
+
+const normalizedPath = normalizePathname(pathname)
 
 const navigationClasses = (path = '/') => {
   let classes = ['right-navigation-item']
 
-  if (pathname === path) {
+  if (normalizedPath === path) {
     classes = [...classes, 'right-navigation-item__active']
   }
 
