--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -2,12 +2,12 @@
 import '@styles/app.css'
 
 import { DEFAULT_TITLE, DEFAULT_KEYWORDS, DEFAULT_DESCRIPTION, THEME_COLOR } from '@utils/content'
-import { normalizePathname } from '@utils/links'
+import { getPathname } from '@utils/links'
 
 const { title } = Astro.props
 
 const pageTitle = title ? `${title} | ${DEFAULT_TITLE}` : DEFAULT_TITLE
-const canonicalURL = new URL(normalizePathname(Astro.url.pathname), Astro.site)
+const canonicalURL = new URL(getPathname(Astro.url), Astro.site)
 ---
 <title>{pageTitle}</title>
 <meta name="keywords" content={DEFAULT_KEYWORDS} />
