--- a/src/components/TopPosts.astro
+++ b/src/components/TopPosts.astro
@@ -26,12 +26,12 @@ const { posts } = Astro.props
     row-gap: 1.4rem;
   }
 
-  .posts-top-item {
+  .posts-top-list :global(.posts-top-item) {
     flex-basis: calc(50% - 0.5rem);
   }
 
   @media screen and (max-width: 900px) {
-    .posts-top-item {
+    .posts-top-list :global(.posts-top-item) {
       flex-basis: 100%;
     }
   }
