--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -133,6 +133,13 @@ import SvgIcon from '@components/SvgIcon.astro'
             PGTune
           </a>,
           <a
+            href="https://re2js.leopard.in.ua/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            RE2JS
+          </a>,
+          <a
             href="https://mpw.leopard.in.ua/"
             target="_blank"
             rel="noopener noreferrer"
