add support icon

--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -100,4 +100,10 @@ import SvgIcon from '@components/SvgIcon.astro'
     </div>
     Написати нам
   </a>
+  <a class="social-button" target="_blank" rel="noopener noreferrer" href="https://www.buymeacoffee.com/leopard">
+    <div class="social-button-icon">
+      <SvgIcon size="2.5rem" name="thumb-up" />
+    </div>
+    Підтримати нас
+  </a>
 </div>
