--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -76,6 +76,8 @@ import SvgIcon from '@components/SvgIcon.astro'
             alt="Олексій Васильєв"
             title="Олексій Васильєв"
             srcset="/images/about/oleksii.webp , /images/about/oleksii@2x.webp 2x"
+            height="350"
+            width="200"
           />
       </div>
       <div class="bio">
